syntax = "proto3";
package kk_etcd_models;
option go_package = "./;kk_etcd_models";
import "pb_role_kk_etcd.proto";

// protoc -I=. --go_out=./ *.proto


// protoc -I=. --dart_out=../../lib/kk_etcd_models *.proto google/protobuf/timestamp.proto


message RoleAddParam {
  string  Name = 1;
}
message RoleAddResponse {

}

message RoleDeleteParam {
  string  Name = 1;
}
message RoleDeleteResponse {

}
message RoleGetParam {
  string  Name = 1;
}
message RoleGetResponse {
  PBRole Role = 1;
}

message RoleListParam {

}
message RoleListResponse {
  PBListRole ListRole = 1;
}


message RoleGrantPermissionParam {
  string Name = 1;
  PBPermission  Perm = 2;
}
message RoleGrantPermissionResponse {

}

message RoleRevokePermissionParam {
  string Name = 1;
  string  Key = 2;
  string  RangeEnd = 3;
}
message RoleRevokePermissionResponse {

}
